FIXED image directry

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
   <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Unravel & Discover the Man Behind the Camera | JAYS VENTURE" />
   <meta prefix="og: http://0gp.me/ns#" property="og:description" content="My name is John Christopher S. Go but I'd like to be called Jaycee. I am a Student & Freelance Photographer. I am an Information Communication Technology (ICT) student who plans to pursue a Bachelor's Degree in Information Technology after I receive my diploma.">
-  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://www.jaysventure.me/img/k-5.jpg" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://www.jaysventure.me//IMG/k-5.jpg" />
   <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://www.jaysventure.me/#home" />
 
   <meta name="twitter:card" content="summary_large_image" />
@@ -53,7 +53,7 @@
 
 <!------------- Navbar ---------------------->
 <nav id="navbar" class="navbar navbar-expand-lg navbar-dark pl-lg-5 pr-lg-5 sticky-top scrolled"> 
-  <a class="navbar-brand pl-3 pt-1" href="#"> <img src="img/logo white.png" alt=""></a>
+  <a class="navbar-brand pl-3 pt-1" href="#"> <img src="/IMG/logo white.png" alt=""></a>
   <button class="navbar-toggler pr-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -136,7 +136,7 @@
     </div>
     <!-- img self -->
     <div class="col-sm-6 text-center img jc-personal">
-      <img class="mt-md-5 pt-md-5 " src="img/jc whole light.png" width="68%" alt="">
+      <img class="mt-md-5 pt-md-5 " src="/IMG/jc whole light.png" width="68%" alt="">
     </div>
   </div>
 </div>
@@ -272,7 +272,7 @@
 <div class="container-fluid reveal pr-0 pl-0 position-relative inspi-bg mx-auto mt-lg-5">
   <div class="row mx-auto inspi-hero">
     <div class="col-sm-6 jc img-fluid mx-auto my-sm-5 hero">
-      <img class="img-fluid mx-auto"  src="img/jc bno.png" alt="">
+      <img class="img-fluid mx-auto"  src="/IMG/jc bno.png" alt="">
     </div>
     <div class="col-sm-6 text-center inspi-title my-lg-5 align-self-center pr-lg-5">
       <h2>INSPIRATIONAL</h2>
@@ -293,7 +293,7 @@
         <p class="name h6 mr-lg-5 pr-lg-3">- Winston S. Churchill </p>
       </div>
       <div class="col-sm-5 img-fluid  img-quote position-relative pr-0 order-first order-sm-last">
-        <img class="float-right"  src="img/churchill.png" width="600" alt="">
+        <img class="float-right"  src="/IMG/churchill.png" width="600" alt="">
       </div>
     </div>
   </div>
@@ -302,7 +302,7 @@
 <div class="container-fluid img2">
   <div class="row">
     <div class="col-sm-5 pl-0 img-fluid  img-quote">
-      <img src="img/george.png" width="600" alt="">
+      <img src="/IMG/george.png" width="600" alt="">
     </div>
     <div class="col-sm-7 txt2 text-center align-self-center my-3 pr-lg-5">
       <p>“Life isn't about finding yourself. Life is about <strong>creating</strong> yourself.”</p>
@@ -319,7 +319,7 @@
       <p class="name h6 mr-lg-4">- Thomas A. Edison </p>
     </div>
     <div class="col-sm-5 img-fluid img-quote  position-relative pr-0 order-first order-sm-last">
-      <img class="float-right" src="img/edison.png" width="600" alt="">
+      <img class="float-right" src="/IMG/edison.png" width="600" alt="">
     </div>
   </div>
 </div>
@@ -328,7 +328,7 @@
 <div class="container-fluid img4">
   <div class="row">
     <div class="col-sm-5 img-fluid img-quote">
-      <img src="img/seuss.png" width="600" alt="">
+      <img src="/IMG/seuss.png" width="600" alt="">
     </div>
     <!-- text below-->
     <div class="col-sm-7 txt4 my-sm-0 text-center align-self-center my-3 pr-lg-5 mx-4 mx-sm-0">
@@ -347,7 +347,7 @@
     </div>
     <!-- text top-->
     <div class="col-sm-5 img-fluid img-quote  position-relative pr-0 order-first order-sm-last">
-      <img class="float-right" src="img/helen.png" width="600" alt="">
+      <img class="float-right" src="/IMG/helen.png" width="600" alt="">
     </div>
   </div>
 </div>
@@ -380,22 +380,22 @@
   <div class="row all-artist d-flex justify-content-center">
     <div class="row d-flex justify-content-center">
       <div class="col-md-3 all mb-5 artist1">
-        <a href="https://www.instagram.com/samkolder/?hl=en"> <img src="img/sam.jpg" class="mb-3"> <br> <span>SAM KOLDER</span></a>
+        <a href="https://www.instagram.com/samkolder/?hl=en"> <img src="/IMG/sam.jpg" class="mb-3"> <br> <span>SAM KOLDER</span></a>
       </div>
       <div class="col-md-3 mx-md-5 all mb-5 artist2">
-        <a href="https://www.instagram.com/kyrkejaleco/?hl=en"> <img src="img/kyrke.jpg" class="mb-3">  <br> <span>KYRKE JALECO</span></a>
+        <a href="https://www.instagram.com/kyrkejaleco/?hl=en"> <img src="/IMG/kyrke.jpg" class="mb-3">  <br> <span>KYRKE JALECO</span></a>
       </div>
       <div class="col-md-3 all mb-5 artist3">
-        <a href="https://www.instagram.com/samkolder/?hl=en"> <img src="img/nainoa.jpg" class="mb-3">  <br> <span>NAINOA LANGER</span></a>
+        <a href="https://www.instagram.com/samkolder/?hl=en"> <img src="/IMG/nainoa.jpg" class="mb-3">  <br> <span>NAINOA LANGER</span></a>
       </div>
       <div class="col-md-3 all mb-5 artist4">
-        <a href="https://www.instagram.com/jralli23/?hl=en"> <img src="img/jr-alli.jpg" class="mb-3">  <br> <span>JR ALLI</span></a>
+        <a href="https://www.instagram.com/jralli23/?hl=en"> <img src="/IMG/jr-alli.jpg" class="mb-3">  <br> <span>JR ALLI</span></a>
       </div>
       <div class="col-md-3 mx-md-5 all mb-5 artist5">
-        <a href="https://www.instagram.com/brandonwoelfel/?hl=en"> <img src="img/brandon.jpg" class="mb-3">  <br> <span>BRANDON WOELFEL</span></a>
+        <a href="https://www.instagram.com/brandonwoelfel/?hl=en"> <img src="/IMG/brandon.jpg" class="mb-3">  <br> <span>BRANDON WOELFEL</span></a>
       </div>
       <div class="col-md-3 all mb-5 artist6">
-        <a href="https://www.instagram.com/akiraharigae/?hl=en"> <img src="img/akira.jpg" class="mb-3">  <br> <span>AKIRA HARIGAE</span></a>
+        <a href="https://www.instagram.com/akiraharigae/?hl=en"> <img src="/IMG/akira.jpg" class="mb-3">  <br> <span>AKIRA HARIGAE</span></a>
       </div>
       
     </div>
@@ -411,44 +411,44 @@
   <div class="row ">
     <!-- half -->
       <div class="col-sm-4 grid grid4 m-0 p-0 text-right">
-        <img class="mb-sm-3" src="img/pulag fren-22.jpg" alt="">
-        <img src="img/real-55.jpg" alt="">
+        <img class="mb-sm-3" src="/IMG/pulag fren-22.jpg" alt="">
+        <img src="/IMG/real-55.jpg" alt="">
       </div>
 
     <!-- solo -->
     <div class="col-sm-4 grid3 grid-solo1 p-0 m-0 text-center ">
-      <img src="img/jc sunset.jpeg" alt="">
+      <img src="/IMG/jc sunset.jpeg" alt="">
     </div>
 
     <!-- half2 -->
     <div class="col-sm-4 grid-half p-0">
       <div class="col-sm-6 grid grid5 mb-md-3 p-0">
-        <img src="img/patapat-2.jpg" alt="">
+        <img src="/IMG/patapat-2.jpg" alt="">
       </div>
       <div class="col-sm-6 grid grid4  p-0">
-        <img src="img/or.jpg" alt="">
+        <img src="/IMG/or.jpg" alt="">
       </div>
     </div>
     <div class="col-12 grid-half-column my-sm-2">
       <div class="row text-center">
         <div class="col-sm-6 text-center p-0 pl-md-4">
-          <img class="" src="img/k-5.jpg" alt="">
+          <img class="" src="/IMG/k-5.jpg" alt="">
         </div>
         <div class="col-sm-6 text-center p-0 pr-md-4">
-          <img class="" src="img/apayao-21.jpg" alt="">
+          <img class="" src="/IMG/apayao-21.jpg" alt="">
         </div>
       </div>
     </div>
     <div class="col-12 grid-tri my-sm-2">
       <div class="row">
         <div class="col-sm-4 p-0 tri-1 ">
-          <img src="img/apayao-18.jpg" alt=""> 
+          <img src="/IMG/apayao-18.jpg" alt=""> 
         </div>
         <div class="col-sm-4 p-0 mid pl-md-3">
           <img class="" src="IMG/apayao.jpg" alt="">
         </div>
         <div class="col-sm-4 p-0 ">
-          <img src="img/apayao-3.jpg" alt="">
+          <img src="/IMG/apayao-3.jpg" alt="">
         </div>
       </div>
     </div>
