reel text re aligned

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <!------------- Navbar ---------------------->
 <nav id="navbar" class="navbar navbar-expand-lg navbar-dark pl-lg-5 pr-lg-5 sticky-top scrolled"> 
-  <a class="navbar-brand pl-3 pt-1" href="#"> <img src="/IMG/logo white.png" alt=""></a>
+  <a class="navbar-brand pl-3 pt-1" href="#"> <img src="IMG/logo white.png" alt=""></a>
   <button class="navbar-toggler pr-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -100,19 +100,19 @@
       <img class="travel1-bg mb-5" src="IMG/travel1.jpg" alt="">
     </div>
     <!-- travel2 -->
-    <div class= "col-md-3 col-6 text-center wander">
+    <div class= "col-md-3 col-6 text-center position-relative wander">
       <h3>E</h3>
       <img class="travel2" src="IMG/travel2.png" alt="">
       <img class="travel1-bg" src="IMG/travel2.jpg" alt="">
     </div>
     <!-- travel3 -->
-    <div class= "col-md-3 col-6 pt-md-5 text-center capture">
+    <div class= "col-md-3 col-6 pt-md-5 text-center position-relative capture">
       <h1>E</h1>
       <img class="travel2" src="IMG/travel4.png" alt="">
       <img class="travel1-bg" src="IMG/travel4.jpeg" alt="">
     </div>
     <!-- travel4 -->
-    <div class= "col-md-3 col-6 text-center travel">
+    <div class= "col-md-3 col-6 text-center position-relative travel">
       <h3>L</h3>
       <img class="travel3 mb-5" src="IMG/travel3.png" alt="">
       <img class="travel1-bg" src="IMG/travel3.jpg" alt="">
@@ -268,8 +268,8 @@
 
 <!----------------- inspirartional ---------------->
 <div id="inspirational" class="scrollspy">
-<!-------------- hero ----------------- -->
-<div class="container-fluid reveal pr-0 pl-0 position-relative inspi-bg mx-auto mt-lg-5">
+<!-------------- hero ----------------- -->t
+<div class="container-fluid reveal pr-0 pl-0 position-relaive inspi-bg mx-auto mt-lg-5">
   <div class="row mx-auto inspi-hero">
     <div class="col-sm-6 jc img-fluid mx-auto my-sm-5 hero">
       <img class="img-fluid mx-auto"  src="/IMG/jc bno.png" alt="">
