--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <lord-icon
     src="https://cdn.lordicon.com/xwjtkymn.json"
     trigger="loop"
-    colors="primary:#121331,secondary:#08a88a"
-    stroke="12"
+    colors="primary:#ffffff,secondary:#08a88a"
+    stroke="30"
     scale="60"
     style="width:50px;height:50px">
 </lord-icon>
